# server/api/controllers/pet-management/router.ts
@@ -6,4 +6,5 @@ export default express
   .Router()
   .post('/', controller.create)
   .delete('/delete/:id', controller.delete)
+  .put('/put', controller.update)
   .get('/:id', controller.byId);
